--- a/Cases/Básico/Case_Basico.ipynb
+++ b/Cases/Básico/Case_Basico.ipynb
@@ -40,6 +40,7 @@
     "                  \"Isadora Russo (+55 11 97602-6952)\",\n",
     "                  \"Lorenzo Frohlich (+55 41 9577-6018)\",\n",
     "                  \"Lucas Zupolini (+55 16 99125-3551)\",\n",
+    "                  \"Max Juan (+55 11 94235-0998)\"\n",
     "                  \"Natália Artilha (Ka) (+55 11 94123-9923)\"]\n",
     "\n",
     "print(f'Entrar em contato com {lista_contatos[random.randint(0, 7)]}.')"
