--- a/Cases/Básico/Case_Basico.ipynb
+++ b/Cases/Básico/Case_Basico.ipynb
@@ -36,6 +36,7 @@
     "lista_contatos = [\"Alice Saraiva (+55 79 9874-7424)\",\n",
     "                  \"Ana Cristina (+55 11 9 7893-7687)\",\n",
     "                  \"Carlos Silva (+55 19 99696-8315)\",\n",
+    "                  \"Emily Meneses (+55 11 98097-4871)\";\n",
     "                  \"Felipe Heidenfelder (+55 22 98874-8454)\",\n",
     "                  \"Isadora Russo (+55 11 97602-6952)\",\n",
     "                  \"Lorenzo Frohlich (+55 41 9577-6018)\",\n",
@@ -43,7 +44,7 @@
     "                  \"Max Juan (+55 11 94235-0998)\",\n",
     "                  \"Natália Artilha (Ka) (+55 11 94123-9923)\"]\n",
     "\n",
-    "print(f'Entrar em contato com {lista_contatos[random.randint(0, 8)]}.')"
+    "print(f'Entrar em contato com {lista_contatos[random.randint(0, 9)]}.')"
    ]
   },
   {
