Atualizar o Case_Basico.ipynb

--- a/Cases/Básico/Case_Basico.ipynb
+++ b/Cases/Básico/Case_Basico.ipynb
@@ -36,7 +36,7 @@
     "lista_contatos = [\"Alice Saraiva (+55 79 9874-7424)\",\n",
     "                  \"Ana Cristina (+55 11 9 7893-7687)\",\n",
     "                  \"Carlos Silva (+55 19 99696-8315)\",\n",
-    "                  \"Emily Meneses (+55 11 98097-4871)\";\n",
+    "                  \"Emily Meneses (+55 11 98097-4871)\",\n",
     "                  \"Felipe Heidenfelder (+55 22 98874-8454)\",\n",
     "                  \"Isadora Russo (+55 11 97602-6952)\",\n",
     "                  \"Lorenzo Frohlich (+55 41 9577-6018)\",\n",
